--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,11 @@
 {
   "require": {
     "wp-cli/php-cli-tools": "^0.11.22"
+  },
+
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/"
+    }
   }
 }
